Assessability fixes - There’s no <!doctype html> - <h3>Bright &amp; Matt is a design and research studio.</h3> should probably be an H2 semantically - Surprisingly, the red email hyperlink doesn't pass colour contrast https://colourcontrast.cc/ffffff/ff0000 - But this darker red would pass at AA and AAA https://colourcontrast.cc/ffffff/b50000 - I wouldn't have the H1 linking to itself on this page - we'll need it on other pages, but I don't think it's ideal here (sets up the expectation it's going somewhere that it isn't) Thansk @atrvrs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,7 +34,7 @@ span {
 h2, .h2 {
   font-size: 1.66666667em;
 	font-weight: 600;
-  line-height: 0.89333333em;
+  line-height: 1.66666667em;
   margin-top: 1.78666666em;
   margin-bottom: 0.89333333em;
 }
@@ -103,9 +103,9 @@ sup {
 sub {
   bottom: -0.25em;
 }
-a {
-  color: black;
-  text-decoration: none;
+/* a {
+  color: #b50000;
+  text-decoration: none; */
 }
 small {
   line-height: 1.48888889em;
